--- a/Accommodations.html
+++ b/Accommodations.html
@@ -27,7 +27,7 @@
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="trips.html">Trips</a>
+                <a href="Trips.html">Trips</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -35,19 +35,19 @@
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="transport.html">Transport</a>
+                <a href="Transport.html">Transport</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="reviews.html">Reviews</a>
+                <a href="Reviews.html">Reviews</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="about.html">About</a>
+                <a href="About_Us.html">About</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="contact.html">Contact</a>
+                <a href="Contact_Us.html">Contact</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -1281,6 +1281,6 @@
         </div>
     </footer>
     
-    <script src="/assets/Js/Accommodations.js"></script>
+    <script src="assets/Js/Accommodations.js"></script>
 </body>
 </html>
