--- a/Trips.html
+++ b/Trips.html
@@ -25,7 +25,7 @@
         
         <ul class="nav-links">
             <li>
-                <a href="./index.html">Home</a>
+                <a href="index.html">Home</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -41,15 +41,15 @@
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Reviews.html">Reviews</a>
+                <a href="Reviews.html">Reviews</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./About_Us.html">About</a>
+                <a href="About_Us.html">About</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Contact_Us.html">Contact</a>
+                <a href="Contact_Us.html">Contact</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -183,6 +183,6 @@
     </footer>
 
     <!-- JSON data for trips -->
- <script src="/assets/Js/trip.js"></script>
+ <script src="assets/Js/trip.js"></script>
 </body>
 </html>
