--- a/About_Us.html
+++ b/About_Us.html
@@ -28,7 +28,7 @@
         
         <ul class="nav-links">
             <li>
-                <a href="./index.html">Home</a>
+                <a href="index.html">Home</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -44,15 +44,15 @@
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Reviews.html">Reviews</a>
+                <a href="Reviews.html">Reviews</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./About_Us.html" class="active">About</a>
+                <a href="About_Us.html" class="active">About</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Contact_Us.html">Contact</a>
+                <a href="Contact_Us.html">Contact</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -359,6 +359,6 @@
         </div>
     </footer>
 
-   <script src="/assets/Js/Abouy-Us.js"></script>
+   <script src="assets/Js/Abouy-Us.js"></script>
 </body>
 </html>
