--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -26,7 +26,7 @@
         
         <ul class="nav-links">
             <li>
-                <a href="./index.html">Home</a>
+                <a href="index.html">Home</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -42,15 +42,15 @@
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Reviews.html">Reviews</a>
+                <a href="Reviews.html">Reviews</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./About_Us.html">About</a>
+                <a href="About_Us.html">About</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Contact_Us.html" class="active">Contact</a>
+                <a href="Contact_Us.html" class="active">Contact</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -225,6 +225,6 @@
     </footer>
 
     <!-- Google Maps API -->
-   <script src="/assets/Js/contact_Us.js"></script>
+   <script src="assets/Js/contact_Us.js"></script>
 </body>
 </html>
