--- a/Reviews.html
+++ b/Reviews.html
@@ -41,15 +41,15 @@
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Reviews.html" class="active">Reviews</a>
+                <a href="Reviews.html" class="active">Reviews</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./About_Us.html">About</a>
+                <a href="About_Us.html">About</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
-                <a href="./Contact_Us.html">Contact</a>
+                <a href="Contact_Us.html">Contact</a>
                 <div class="lightning-effect"></div>
             </li>
             <li>
@@ -290,6 +290,6 @@
         </div>
     </footer>
 
- <script src="/assets/Js/Review.js"></script>
+ <script src="assets/Js/Review.js"></script>
 </body>
 </html>
